# cargo-strip

./: Cargo.toml  LICENSE  README.md  cargo-strip
.github/workflows/: ci.yml
src/: main.rs
