[package]
name = "cargo-strip"
version = "0.2.3"
authors = ["Guillaume Valadon <guillaume@valadon.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/guedou/cargo-strip/"
description = "Strip Rust binaries created with cargo"
edition = "2018"

[dependencies]
cargo_metadata = "0.10.0"
clap = "2.33.1"
